# GiGaSdk

./: .gitignore  .gitmodules  CMakeLists.txt  CTestConfig.txt  LICENSE.txt  README.md  build.md
CMakeModules/: CreatePackage.cmake  FindCasablanca.cmake  FindCrypto++.cmake  FindCurlcpp.cmake  doxy.config.in  path.h.in  version.h.in
CPackInstalls/release/: CPackConfig.cmake
doc/: header.html  index.md
files/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp  prepoc_manage.h
src/api/: GroupsApi.cpp  NetworkApi.h  UsersApi.cpp  UsersApi.h
src/api/data/: DataNode.h  EmailKey.h  ExternalAccount.h  Group.h  IdContainer.h  Locale.h  Node.h  NodeList.h  Offer.h  Preview.h  PreviewCover.h  RsaKey.h  SentEmail.h  StoredFileFragment.h  Stream.h  Subtitle.h  Success.h  Timeline.h  TimelineEntry.h  User.h  UserExists.h  UsersRelation.h
src/app/: CMakeLists.txt  main.cpp
src/client/: GigaApi.h  HttpClient.cpp  HttpClient.h
src/examples/: CMakeLists.txt  ex01HelloWorld.cpp  ex02ListContacts.cpp  ex03ListNodes.cpp  ex04DownloadFiles.cpp  ex05DownloadFilesWithProgress.cpp  ex06UploadFiles.cpp  ex07CopyMove.cpp  ex08DownloadAllEbooks.cpp  ex99MovieDatabase.cpp
src/giga/: Application.cpp  Application.h  CMakeLists.txt  Config.h
src/giga/api/: ChunkUploader.cpp  ChunkUploader.h  FileApi.cpp  FileApi.h  FileUploader.cpp  FileUploader.h  GigaApi.cpp  GigaApi.h  GroupsApi.cpp  GroupsApi.h  MiscApi.cpp  NetworkApi.cpp  NetworkApi.h  NodesApi.cpp  NodesApi.h  UsersApi.cpp  UsersApi.h
src/giga/api/data/: CopyLog.h  DataNode.h  EmailKey.h  ExternalAccount.h  Group.h  IdContainer.h  Locale.h  MimeIconAssociation.cpp  MimeIconAssociation.h  Node.h  NodeList.h  Offer.h  Preview.h  PreviewCover.h  RsaKey.h  SentEmail.h  SmallNode.h  StoredFileFragment.h  Stream.h  Subtitle.h  Success.h  Timeline.h  TimelineEntry.h  User.h  UserExists.h  UsersRelation.h
src/giga/core/: Application.cpp  Application.h  Downloader.cpp  Downloader.h  FileDownloader.cpp  FileDownloader.h  FileNode.cpp  FileNode.h  FileTransferer.cpp  FileTransferer.h  FileUploader.cpp  FileUploader.h  FolderNode.cpp  FolderNode.h  Node.cpp  Node.h  Preview.cpp  Preview.h  Sha1Calculator.cpp  Sha1Calculator.h  TransferProgress.h  Uploader.cpp  Uploader.h  User.cpp  User.h  UserRelation.cpp  UserRelation.h
src/giga/core/details/: ChunkUploader.cpp  ChunkUploader.h  CurlProgress.cpp  CurlProgress.h  CurlWriter.cpp  CurlWriter.h
src/giga/rest/: Empty.h  HttpClient.cpp  HttpClient.h  HttpErrors.cpp  HttpErrors.h  JsonObj.cpp  JsonObj.h  JsonSerializer.h  JsonUnserializer.h  prepoc_manage.h
src/giga/utils/: Crypto.cpp  Crypto.h  EnumConvertor.h  Utils.cpp  Utils.h  make_unique.h
src/model/: HttpErrors.h  JsonSerializer.h  JsonUnserializer.h  Locale.h
src/rest/: JsonObj.h  JsonSerializer.h
src/tests/: testCoreUser.cpp  testCrypto.cpp  testData.cpp  testUpload.cpp
src/utils/: Crypto.cpp
vendors/: vs.build.bat
vendors/VS2015/: Main.cpp  copydep.bat  get_dependencies.sln  get_dependencies.vcxproj  get_dependencies.vcxproj.filters  packages.config
