
SET(EXE_NAME GiGaSdk)

FIND_PACKAGE(Casablanca)
INCLUDE_DIRECTORIES(${CASABLANCA_INCLUDE_DIR})

FILE(GLOB_RECURSE SRC *.cpp *.h)
ADD_EXECUTABLE(${EXE_NAME} ${SRC})

TARGET_LINK_LIBRARIES(${EXE_NAME} ${CASABLANCA_LIBRARY})

###Install
INSTALL(DIRECTORY "./"
        DESTINATION "include/GiGaSdk"
        COMPONENT headers
        FILES_MATCHING PATTERN "*.h"
        PATTERN ".git" EXCLUDE)

INSTALL( TARGETS ${EXE_NAME} RUNTIME DESTINATION bin COMPONENT applications)

