SET(EXE_NAME GiGaSdk)

FILE(GLOB_RECURSE SRC *.cpp *.h)
ADD_EXECUTABLE(${EXE_NAME} ${SRC})

TARGET_LINK_LIBRARIES(${EXE_NAME} giga)
TARGET_LINK_LIBRARIES(${EXE_NAME} ${Boost_LIBRARIES})
TARGET_LINK_LIBRARIES(${EXE_NAME} ${CASABLANCA_LIBRARY})
TARGET_LINK_LIBRARIES(${EXE_NAME} ${CRYPTO++_LIBRARIES})
TARGET_LINK_LIBRARIES(${EXE_NAME} ${CURL_LIBRARY})
TARGET_LINK_LIBRARIES(${EXE_NAME} ${CURLCPP_LIBRARIES})

INSTALL(TARGETS ${EXE_NAME} RUNTIME DESTINATION bin COMPONENT applications)
