SET(EXE_NAME GiGaSdk)

FILE(GLOB_RECURSE SRC *.cpp *.h)
ADD_EXECUTABLE(${EXE_NAME} ${SRC})

TARGET_LINK_LIBRARIES(${EXE_NAME} giga)
TARGET_LINK_LIBRARIES(${EXE_NAME} ${OPENSSL_LIBRARIES})
TARGET_LINK_LIBRARIES(${EXE_NAME} ${Boost_LIBRARIES})
TARGET_LINK_LIBRARIES(${EXE_NAME} ${CASABLANCA_LIBRARY})
TARGET_LINK_LIBRARIES(${EXE_NAME} ${CRYPTO++_LIBRARIES})
TARGET_LINK_LIBRARIES(${EXE_NAME} ${CURL_LIBRARY})
TARGET_LINK_LIBRARIES(${EXE_NAME} ${CURLCPP_LIBRARIES})

IF(MSVC)
    ADD_CUSTOM_COMMAND(
        TARGET ${EXE_NAME} 
        POST_BUILD 
        COMMAND ${CMAKE_COMMAND} -E copy_directory "${DEPS_PATH}/bin" $<TARGET_FILE_DIR:${EXE_NAME}>
    )
    INSTALL(DIRECTORY "${DEPS_PATH}/bin" DESTINATION . COMPONENT applications)
ENDIF(MSVC)

INSTALL(TARGETS ${EXE_NAME} RUNTIME DESTINATION bin COMPONENT applications)
