FILE(GLOB_RECURSE EXAMPLES *.cpp)
FOREACH(example ${EXAMPLES})
  STRING(REGEX REPLACE ".*/([^\\/]+).cpp" "\\1" EXE_EXAMPLES ${example})

  ADD_EXECUTABLE(${EXE_EXAMPLES} ${example})
  TARGET_LINK_LIBRARIES(${EXE_EXAMPLES} giga)
  TARGET_LINK_LIBRARIES(${EXE_EXAMPLES} ${OPENSSL_LIBRARIES})
  TARGET_LINK_LIBRARIES(${EXE_EXAMPLES} ${Boost_LIBRARIES})
  TARGET_LINK_LIBRARIES(${EXE_EXAMPLES} ${CASABLANCA_LIBRARY})
  TARGET_LINK_LIBRARIES(${EXE_EXAMPLES} ${CRYPTO++_LIBRARIES})
  TARGET_LINK_LIBRARIES(${EXE_EXAMPLES} ${CURL_LIBRARY})
  TARGET_LINK_LIBRARIES(${EXE_EXAMPLES} ${CURLCPP_LIBRARIES})
  
  IF(MSVC)
    FILE(GLOB DEP_DLLS "${DEPS_PATH}/bin/*.dll")
    FOREACH(_dllfile ${DEP_DLLS})
        ADD_CUSTOM_COMMAND(
            TARGET ${EXE_TEST}
            POST_BUILD
            COMMAND ${CMAKE_COMMAND} -E copy_if_different "${_dllfile}" $<TARGET_FILE_DIR:${EXE_EXAMPLES}>
        )
    ENDFOREACH()
  ENDIF(MSVC)
ENDFOREACH(example)
