SET(LIB_NAME giga)

FILE(GLOB_RECURSE SRC *.cpp *.h)
ADD_LIBRARY(${LIB_NAME} ${SRC})

###Install
INSTALL(DIRECTORY "./"
        DESTINATION "include/giga"
        COMPONENT headers
        FILES_MATCHING PATTERN "*.h"
        PATTERN ".git" EXCLUDE)

INSTALL(TARGETS ${LIB_NAME} ARCHIVE DESTINATION lib COMPONENT lib)

