SET(LIB_NAME giga)

FILE(GLOB_RECURSE SRC *.cpp *.h)

IF(MSVC)
ADD_LIBRARY(${LIB_NAME} ${SRC})
ELSE()
ADD_LIBRARY(${LIB_NAME} SHARED ${SRC})
ENDIF()

IF(APPLE)
    TARGET_LINK_LIBRARIES(${LIB_NAME} ${OPENSSL_LIBRARIES})
    TARGET_LINK_LIBRARIES(${LIB_NAME} ${Boost_LIBRARIES})
    TARGET_LINK_LIBRARIES(${LIB_NAME} ${CASABLANCA_LIBRARY})
    TARGET_LINK_LIBRARIES(${LIB_NAME} ${CRYPTO++_LIBRARIES})
    TARGET_LINK_LIBRARIES(${LIB_NAME} ${CURL_LIBRARY})
    TARGET_LINK_LIBRARIES(${LIB_NAME} ${CURLCPP_LIBRARIES})
ENDIF()

###Install
INSTALL(DIRECTORY "./"
        DESTINATION "include/giga"
        COMPONENT headers
        FILES_MATCHING PATTERN "*.h"
        PATTERN ".git" EXCLUDE)

INSTALL(TARGETS ${LIB_NAME} 
        ARCHIVE DESTINATION lib 
        LIBRARY DESTINATION lib 
        COMPONENT lib)

